--- a/public/css/components/_features.scss
+++ b/public/css/components/_features.scss
@@ -128,6 +128,7 @@ features {
         @media screen and (max-width: 685px) {
             height: 200px;
             // width: 32%;
+            width: 49%;
         }
 
         .ka-landing-feature-button-up {
